<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="viewLoginModel"
            type="com.viewModel.CheckUserInfoViewModel" />
    </data>


    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10"
            android:text="@string/skip"
            android:id="@+id/tv_skip"
            android:layout_margin="10dp"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10"
            android:text="@string/login_icon_name"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:id="@+id/title"
            android:textSize="@dimen/text_size_30"
            app:layout_constraintTop_toBottomOf="@+id/tv_skip"
            android:gravity="center"
            />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/ll_center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            >


        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_60"
            android:layout_marginLeft="@dimen/margin_40"
            android:layout_marginRight="@dimen/margin_40"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@={viewLoginModel.mPhone}"
            android:id="@+id/et_phone"
            android:inputType="number"
            android:maxLength="11"
            android:hint="@string/hint_phone"
            app:textChanged="@{viewLoginModel.onTextLongChangeCommand}"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="@dimen/text_size_16"
            />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="6dp"
            android:src="@mipmap/clean_edit"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/et_phone"
            app:layout_constraintRight_toRightOf="@+id/et_phone"
            android:visibility="@{viewLoginModel.clearBtnVisibility}"
            app:onClickCommand="@{viewLoginModel.clearUserNameOnClickCommand}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10"
            android:text="@string/hint_login_text"
            android:id="@+id/tv_hint_text"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintTop_toBottomOf="@+id/et_phone"
            android:gravity="center"
            />


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/btn_login"
            android:hint="@string/next"
            android:layout_marginTop="@dimen/margin_40"
            android:layout_marginLeft="@dimen/margin_40"
            android:layout_marginRight="@dimen/margin_40"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_text"
            app:layout_constraintRight_toRightOf="parent"
            app:onClickCommand="@{viewLoginModel.loginOnClickCommand}"
            android:textSize="@dimen/text_size_16"/>

        </android.support.constraint.ConstraintLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10"
            android:text="@string/third_login"
            android:id="@+id/tv_login_third"
            android:layout_marginTop="@dimen/margin_60"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintBottom_toTopOf="@+id/ll_bottom"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/ll_bottom"
            android:layout_marginBottom="@dimen/margin_40"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_weixin"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/wei_xin"
                app:onClickCommand="@{viewLoginModel.loginOnByWeiXinClickCommand}"
                android:gravity="center"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_qq"
                android:text="@string/qq"
                app:onClickCommand="@{viewLoginModel.loginOnByQQClickCommand}"
                android:layout_marginLeft="@dimen/margin_60"
                app:layout_constraintLeft_toRightOf="@+id/btn_weixin"
                android:gravity="center"/>
        </LinearLayout>



    </android.support.constraint.ConstraintLayout>


</layout>